2005-01-24  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBindingCompilerServices.cs: 
	* JavaLanguageBinding.cs: Use the new progress monitor API.
	
2005-01-16  John Luke  <john.luke@gmail.com>

	* Makefile.am: remove FormattingStrategy from build
	* JavaLanguageBinding.cs: make const LanguageName internal
	comment out NotImplementedException for GenerateMakefile
	so it doesn't abort MD when running
	* JavaBindingCompilerServices.cs: remove warnings
	* ProjectTreeBuilder/JavaNodeBuilder.cs: remove some unused
	code that caused warnings, use MonoDevelop.Services.Runtime
	instead of old method of getting services
	* TODO: add
	* template/Ikvm*.xft: Target "Exe" or "WinExe" instead of "Class"

2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBindingCompilerServices.cs:
	* Gui/ProjectConfigurationPropertyPanel.cs:
	* JavaLanguageBinding.cs:
	* JavaBinding.addin.xml:
	* ProjectTreeBuilder/JavaNodeBuilder.cs: Follow architecture changes.
	
	* JavaCompilerParameters.cs: Moved some parameters and enum
	definitions to DotNetProjectConfiguration.
	
	* Project/JavaProject.cs: Removed. Not needed any more.
	* Makefile.am: Updated.

2004-12-13  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBindingCompilerServices.cs: StatusBarService.ProgressMonitor is
	not a StatusBar widget any more.

2004-12-07  Alexandre Gomes <alexmipego@hotmail.com>

	* JavaLanguageBinding.cs: Added CommentTag to be used by (Un)CommentCode

2004-11-05  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/Parser.cs: Added HandlesFileExtension() to work with new
	IParser

2004-07-05  John Luke  <jluke@cfl.rr.com>

	* *.cs: cleanup everything
	remove single file compile/run
	remove runtime choices and use ikvmc to produce assemblies

	need to check errors on ikvmc part, I wish there was a better
	way than screen-scraping to do this.

	convert line endings to unix, not sure why they were dos style

2004-06-08  John Luke  <jluke@cfl.rr.com>
