@@ -9,6 +9,7 @@ using System;
 using System.Diagnostics;
 using System.IO;
 using System.CodeDom.Compiler;
+using System.Text;
 
 using MonoDevelop.Gui.Components;
 using MonoDevelop.Services;
@@ -24,14 +25,10 @@ namespace JavaBinding
 			return Path.GetExtension(fileName) == ".java";
 		}
 		
-		FileUtilityService fileUtilityService = (FileUtilityService) ServiceManager.GetService(typeof(FileUtilityService));
-
 		string GetCompilerName (JavaCompilerParameters cp)
 		{
 			if (cp.Compiler == JavaCompiler.Gcj)
-			{
 				return "gcj";
-			}
 
 			return "javac";
 		}
@@ -39,7 +36,8 @@ namespace JavaBinding
 		public ICompilerResult Compile (ProjectFileCollection projectFiles, ProjectReferenceCollection references, DotNetProjectConfiguration configuration, IProgressMonitor monitor)
 		{
 			JavaCompilerParameters compilerparameters = (JavaCompilerParameters) configuration.CompilationParameters;
-			if (compilerparameters == null) compilerparameters = new JavaCompilerParameters ();
+			if (compilerparameters == null)
+				compilerparameters = new JavaCompilerParameters ();
 			
 			string outdir = configuration.OutputDirectory;
 			string options = "";
@@ -77,7 +75,6 @@ namespace JavaBinding
 				}
 			}
 
-			TempFileCollection  tf = new TempFileCollection ();			
 			string args = "";
 			
 			if (compilerparameters.Compiler == JavaCompiler.Gcj)
@@ -92,20 +89,27 @@ namespace JavaBinding
 			}
 			//Console.WriteLine (args);
 
-			StreamReader output;
-			StreamReader error;
-			DoCompilation (monitor, compiler, args, tf, configuration, compilerparameters, out output, out error);
-			ICompilerResult cr = ParseOutput (tf, error);			
-			
+			string output = String.Empty;
+			string error = String.Empty;
+			TempFileCollection  tf = new TempFileCollection ();			
+			DoCompilation (monitor, compiler, args, tf, configuration, compilerparameters, ref output, ref error);
+			ICompilerResult cr = ParseOutput (tf, output, error);			
+			File.Delete (output);
+			File.Delete (error);
 			return cr;
 		}
 
-		private void DoCompilation (IProgressMonitor monitor, string compiler, string args, TempFileCollection tf, DotNetProjectConfiguration configuration, JavaCompilerParameters compilerparameters, out StreamReader output, out StreamReader error)
+		private void DoCompilation (IProgressMonitor monitor, string compiler, string args, TempFileCollection tf, DotNetProjectConfiguration configuration, JavaCompilerParameters compilerparameters, ref string output, ref string error)
 		{
+			output = Path.GetTempFileName ();
+			error = Path.GetTempFileName ();
+
 			try {
 				monitor.BeginTask (null, 2);
 				monitor.Log.WriteLine ("Compiling Java source code ...");
-				ProcessStartInfo si = new ProcessStartInfo (compiler, args);
+				string arguments = String.Format ("-c \"{0} {1} > {2} 2> {3}\"", compiler, args, output, error);
+				ProcessStartInfo si = new ProcessStartInfo ("/bin/sh", arguments);
+				//Console.WriteLine ("{0} {1}", si.FileName, si.Arguments);
 				si.RedirectStandardOutput = true;
 				si.RedirectStandardError = true;
 				si.UseShellExecute = false;
@@ -116,27 +120,22 @@ namespace JavaBinding
 				
 				monitor.Step (1);
 				monitor.Log.WriteLine ("Generating assembly ...");
-				CompileToAssembly (configuration, compilerparameters);
-			
-				// FIXME: avoid having a full buffer
-				// perhaps read one line and append parsed output
-				// and then return cr at end 
-				output = p.StandardOutput;
-				error = p.StandardError;
+				CompileToAssembly (configuration, compilerparameters, output, error);
 			} finally {
 				monitor.EndTask ();
 			}
         }
 
-		void CompileToAssembly (DotNetProjectConfiguration configuration, JavaCompilerParameters compilerparameters)
+		void CompileToAssembly (DotNetProjectConfiguration configuration, JavaCompilerParameters compilerparameters, string output, string error)
 		{
 			string outdir = configuration.OutputDirectory;
 			string outclass = Path.Combine (outdir, configuration.OutputAssembly + ".class");
 			string asm = Path.GetFileNameWithoutExtension (outclass);
 		
 			// sadly I dont think we can specify the output .class name
-			string args = String.Format ("{0} -assembly:{1}", "*.class", asm);
-            ProcessStartInfo si = new ProcessStartInfo ("ikvmc", args);
+			string args = String.Format ("-c \"ikvmc {0} -assembly:{1} > {2} 2> {3}\"", "*.class", asm, output, error);
+            ProcessStartInfo si = new ProcessStartInfo ("/bin/sh", args);
+			//Console.WriteLine ("{0} {1}", si.FileName, si.Arguments);
             si.WorkingDirectory = outdir;
 			si.RedirectStandardOutput = true;
             si.RedirectStandardError = true;
@@ -147,48 +146,72 @@ namespace JavaBinding
 			p.WaitForExit ();
 		}
 		
-		ICompilerResult ParseOutput (TempFileCollection tf, StreamReader errorStream)
+		ICompilerResult ParseOutput (TempFileCollection tf, string stdout, string stderr)
 		{
-			string compilerOutput = "";		
-			StreamReader sr = errorStream;
+			StringBuilder compilerOutput = new StringBuilder ();
 			CompilerResults cr = new CompilerResults (tf);
 			
-			while (true) 
+			foreach (string s in new string[] { stdout, stderr })
 			{
-				string next = sr.ReadLine ();
+				StreamReader sr = File.OpenText (s);
+				while (true) 
+				{
+					string next = sr.ReadLine ();
 				
-				if (next == null)
-					break;
+					if (next == null)
+						break;
 
-				CompilerError error = new CompilerError ();
+					CompilerError error = CreateErrorFromString (next);
 
-				int errorCol = 0;
-				string col = next.Trim ();
-				if (col.Length == 1 && col == "^")
-					errorCol = next.IndexOf ("^");
-
-				compilerOutput += next + "\n";
-
-				int index1 = next.IndexOf (".java:");
-				if (index1 < 0)
-					continue;				
-				
-				//string s1 = next.Substring (0, index1);
-				string s2 = next.Substring (index1 + 6);									
-				int index2  = s2.IndexOf (":");				
-				int line = Int32.Parse (next.Substring (index1 + 6, index2));
-				//error.IsWarning   = what[0] == "warning";
-				//error.ErrorNumber = what[what.Length - 1];
-								
-				error.Column = errorCol;
-				error.Line = line;
-				error.ErrorText = next.Substring (index1 + index2 + 7);
-				error.FileName = Path.GetFullPath (next.Substring (0, index1) + ".java"); //Path.GetFileName(filename);
-				cr.Errors.Add (error);
+					if (error != null)
+						cr.Errors.Add (error);
+				}
+				sr.Close ();
 			}
-
-			sr.Close ();			
-			return new DefaultCompilerResult (cr, compilerOutput);
+			return new DefaultCompilerResult (cr, compilerOutput.ToString ());
 		}
+
+		// FIXME: the various java compilers will probably need to be parse on
+		// their own and then ikvmc would need one as well
+		private static CompilerError CreateErrorFromString (string error)
+		{
+			if (error.StartsWith ("Note") || error.StartsWith ("Warning"))
+				return null;
+			string trimmed = error.Trim ();
+			if (trimmed.StartsWith ("(to avoid this warning add"))
+				return null;
+			//Console.WriteLine ("error: {0}", error);
+
+			CompilerError cerror = new CompilerError ();
+			cerror.ErrorText = error;
+			return cerror;
+		}
+/* old javac parser
+					CompilerError error = new CompilerError ();
+
+					int errorCol = 0;
+					string col = next.Trim ();
+					if (col.Length == 1 && col == "^")
+						errorCol = next.IndexOf ("^");
+
+					compilerOutput.Append (next);
+					compilerOutput.Append ("\n");
+
+					int index1 = next.IndexOf (".java:");
+					if (index1 < 0)
+						continue;				
+				
+					//string s1 = next.Substring (0, index1);
+					string s2 = next.Substring (index1 + 6);									
+					int index2  = s2.IndexOf (":");				
+					int line = Int32.Parse (next.Substring (index1 + 6, index2));
+					//error.IsWarning   = what[0] == "warning";
+					//error.ErrorNumber = what[what.Length - 1];
+								
+					error.Column = errorCol;
+					error.Line = line;
+					error.ErrorText = next.Substring (index1 + index2 + 7);
+					error.FileName = Path.GetFullPath (next.Substring (0, index1) + ".java"); //Path.GetFileName(filename);
+*/
 	}
 }
